[workspace]
resolver = "2"

members = [
    "day01",
    "day02",
    "day03",
    "day04",
    "day05",
    "day06",
    "day07",
    "day08",
    "day09",
    "day10",
    "day11",
]

[workspace.dependencies]
rstest = "0.18.2"
nom = "7.1.3"
nom_locate = "4.2.0"
rayon = "1.8.0"
indicatif = "0.17.7"
itertools = "0.12.0"
glam = "0.24.2"
